syntax="proto3";

import "krpcext.proto";
option java_multiple_files=true;
option java_generic_services=true;

option java_package="krpc.rpc.monitor.proto";
option java_outer_classname="MonitorProtos";

message RpcStat {

    int32 type = 1;  // 1=req 2=call 3=web
    int64 time = 2; // seconds from 1970
    int32 serviceId = 3;
    int32 msgId = 4;
    int32 success = 5;
    int32 failed = 6;
    int32 timeout = 7;
    repeated int32 timeUsed = 8;
    
};

message ReportRpcStatReq {
    int64 timestamp = 1; // timestamp to generate the stats
    string host = 2; // machine
    string app = 3;
    repeated RpcStat stats = 4;
};

message ReportRpcStatRes {
    int32 retCode = 1;
};

service MonitorService {
	option (krpc.serviceId) = 2;
	rpc reportRpcStat(ReportRpcStatReq) returns (ReportRpcStatRes)  { option (krpc.msgId) = 1; };
}

